# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\V1\IndustryController;
 use App\Http\Controllers\Api\V1\OrganizationController;
+use App\Http\Controllers\Api\V1\PositionCategoryController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\HealthCheckController;
 use Illuminate\Support\Facades\Route;
@@ -29,4 +30,9 @@ Route::prefix('v1')->group(function () {
     Route::get('organizations', [OrganizationController::class, 'index']);
     Route::get('organizations/autocomplete', [OrganizationController::class, 'autocomplete']);
     Route::get('organizations/{idOrSlug}', [OrganizationController::class, 'show']);
+
+    // Position Categories endpoints
+    Route::get('position-categories', [PositionCategoryController::class, 'index']);
+    Route::get('position-categories/autocomplete', [PositionCategoryController::class, 'autocomplete']);
+    Route::get('position-categories/{idOrSlug}', [PositionCategoryController::class, 'show']);
 });
